tests/invalid/type/group_member_mutation.pts
int group G {
  A = 1
}

function main() : void {
  G.A = 2;
}
